[issue-14243] - fixed layout issues mentioned.

--- a/src/components/chat/messages/index.scss
+++ b/src/components/chat/messages/index.scss
@@ -103,10 +103,6 @@
     border-radius: 50%;
   }
 
-  .moderator-avatar {
-    border-radius: 5px;
-  }
-
   .inactive {
     opacity: .5;
   }
