--- a/src/components/utils/avatar/index.scss
+++ b/src/components/utils/avatar/index.scss
@@ -43,10 +43,6 @@ $avatar-size: 2rem;
     }
   }
 
-  .moderator-avatar {
-    border-radius: 5px;
-  }
-
   .circle {
     border-radius: 50%;
   }
